@@ -144,7 +144,7 @@
 				AdditionalIncludeDirectories=".\spirit-1.8.5-miniboost;..\pokereval\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;OEMRESOURCE"
 				MinimalRebuild="false"
-				ExceptionHandling="2"
+				ExceptionHandling="1"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
